[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/images/intro_scene/banana tree - 15.png" type="Texture" id=1]
[ext_resource path="res://entities/intro-scene/intro-scene.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/audio/John_Bartmann_-_14_-_Serial_Killer.mp3" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 1280, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 1600, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 1920, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 2240, 0, 320, 180 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 2.0
} ]

[node name="intro-scene" type="Node2D"]
position = Vector2( 480, 270 )
script = ExtResource( 2 )

[node name="ScaledCont" type="Node2D" parent="."]
scale = Vector2( 3.2, 3.4 )

[node name="BG" type="AnimatedSprite" parent="ScaledCont"]
position = Vector2( 10, 10.5882 )
frames = SubResource( 9 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Text" type="Label" parent="."]
margin_left = -429.0
margin_top = 242.0
margin_right = -129.0
margin_bottom = 259.0
theme = ExtResource( 3 )
text = "I need to get back home to my family. . . "
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="."]
visible = false
margin_left = -432.0
margin_top = 273.0
margin_right = -315.0
margin_bottom = 296.0
theme = ExtResource( 3 )
disabled = true
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="ScaledCont/BG" to="." method="_on_BG_animation_finished"]
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
